<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        tools:ignore="UselessLeaf">
        <TextView
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:text="@string/sabtu"
            android:textSize="40sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <GridLayout
        android:id="@+id/mainGrid"
        android:columnCount="2"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:layout_weight="8"
        android:columnOrderPreserved="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="14dp">
        <ImageView
            android:src="@drawable/ic_succes"
            android:contentDescription="@string/todo" />
        <TextView
            android:text="@string/sabtu1"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <ImageView
            android:src="@drawable/ic_succes"
            android:contentDescription="@string/todo" />
        <TextView
            android:text="@string/sabtu2"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <ImageView
            android:src="@drawable/ic_succes"
            android:contentDescription="@string/todo" />
        <TextView
            android:text="@string/sabtu3"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </GridLayout>
</LinearLayout>